# smsbot-matrix

./: .env.example  .gitignore  aggiorna_profilo.py  example_sms.txt  matrix_bot.py  pyproject.toml  readme.md  send_matrix_message.py  sms_to_matrix.py  sms_to_matrix.sh  test_sms.sh
old/: sms_to_discord.sh
